kubernetes/talos/deploy/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 8123
    protocol: TCP
    targetPort: http
  - name: colot
    port: 5683
    protocol: UDP
    targetPort: colot
  selector:
    app: home-assistant
    release: home-assistant
  type: ClusterIP
