kubernetes/talos/deploy/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
spec:
  ingressClassName: external
  rules:
  - http:
      paths:
      - backend:
          service:
            name: home-assistant
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
